--- a/Workflows/SendHackerrankTest.xaml
+++ b/Workflows/SendHackerrankTest.xaml
@@ -17,7 +17,7 @@
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1334,3500</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1334,3521</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>SendHackerrankTest_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="23">
@@ -75,13 +75,13 @@
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence sap:VirtualizedContainerService.HintSize="1344,3335" sap2010:WorkflowViewState.IdRef="Sequence_15">
+  <Sequence sap:VirtualizedContainerService.HintSize="1344,3356" sap2010:WorkflowViewState.IdRef="Sequence_15">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Sequence DisplayName="SendHackerrankTest" sap:VirtualizedContainerService.HintSize="1302,3243" sap2010:WorkflowViewState.IdRef="Sequence_1">
+    <Sequence DisplayName="SendHackerrankTest" sap:VirtualizedContainerService.HintSize="1302,3264" sap2010:WorkflowViewState.IdRef="Sequence_1">
       <Sequence.Variables>
         <Variable x:TypeArguments="x:String" Name="theBody" />
         <Variable x:TypeArguments="scg:Dictionary(x:String, x:String)" Name="inviteDict" />
@@ -99,7 +99,7 @@
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1260,64" sap2010:WorkflowViewState.IdRef="WriteLine_2" Text="[&quot;=== SendHackerrank Test===&quot; + Environment.NewLine +&#xA;&quot;Position: &quot; + in_EmployeePosition.ToString + Environment.NewLine +&#xA;in_FullName + &quot; &quot; + in_Email]" />
-      <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="Check if the hackerrank ID is already in the hackerrank table" CommandType="Text" DataTable="[hackerRankDt]" DisplayName="Execute SELECT Query" ExistingDbConnection="[in_Connection]" sap:VirtualizedContainerService.HintSize="1260,130" sap2010:WorkflowViewState.IdRef="ExecuteQuery_2" Sql="[&quot;select * from dbo.hackerank where partneremployee_id=&quot;+in_EmployeeId.ToString +&quot; and position_ID=&quot; + in_EmployeePosition.ToString]">
+      <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="Check if the hackerrank ID is already in the hackerrank table" CommandType="Text" DataTable="[hackerRankDt]" DisplayName="Execute SELECT Query" ExistingDbConnection="[in_Connection]" sap:VirtualizedContainerService.HintSize="1260,132" sap2010:WorkflowViewState.IdRef="ExecuteQuery_2" Sql="[&quot;select * from dbo.hackerank where partneremployee_id=&quot;+in_EmployeeId.ToString +&quot; and position_ID=&quot; + in_EmployeePosition.ToString]">
         <ui:ExecuteQuery.Parameters>
           <scg:Dictionary x:TypeArguments="x:String, Argument" />
         </ui:ExecuteQuery.Parameters>
@@ -109,7 +109,7 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:ExecuteQuery>
-      <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="1260,51" sap2010:WorkflowViewState.IdRef="CommentOut_1">
+      <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="1260,52" sap2010:WorkflowViewState.IdRef="CommentOut_1">
         <ui:CommentOut.Body>
           <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="526,330" sap2010:WorkflowViewState.IdRef="Sequence_11">
             <sap:WorkflowViewStateService.ViewState>
@@ -133,7 +133,7 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:CommentOut>
-      <ui:ReadTextFile Content="[theBody]" DisplayName="Read API Template" FileName="API%20CALLS\inviteCall.txt" sap:VirtualizedContainerService.HintSize="1260,79" sap2010:WorkflowViewState.IdRef="ReadTextFile_1" />
+      <ui:ReadTextFile Content="[theBody]" DisplayName="Read API Template" FileName="API%20CALLS\inviteCall.txt" sap:VirtualizedContainerService.HintSize="1260,80" sap2010:WorkflowViewState.IdRef="ReadTextFile_1" />
       <ui:MultipleAssign DisplayName="Multiple Assign Email Addresses and api calls Status 4" sap:VirtualizedContainerService.HintSize="1260,98" sap2010:WorkflowViewState.IdRef="MultipleAssign_1">
         <ui:MultipleAssign.AssignOperations>
           <scg:List x:TypeArguments="ui:AssignOperation" Capacity="16">
@@ -154,7 +154,7 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:MultipleAssign>
-      <Switch x:TypeArguments="x:Int32" DisplayName="Switch jotFormID for BIO" Expression="[in_EmployeePosition]" sap:VirtualizedContainerService.HintSize="1260,51" sap2010:WorkflowViewState.IdRef="Switch`1_1">
+      <Switch x:TypeArguments="x:Int32" DisplayName="Switch jotFormID for BIO" Expression="[in_EmployeePosition]" sap:VirtualizedContainerService.HintSize="1260,52" sap2010:WorkflowViewState.IdRef="Switch`1_1">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -262,7 +262,7 @@
           <InArgument x:TypeArguments="x:String">["https://form.jotform.com/"+formId+"?employeeId="+in_EmployeeId]</InArgument>
         </Assign.Value>
       </Assign>
-      <Sequence sap2010:Annotation.AnnotationText="Create dictionary for hackerrank dynamic values" DisplayName="Invite Dictionary" sap:VirtualizedContainerService.HintSize="1260,108" sap2010:WorkflowViewState.IdRef="Sequence_2">
+      <Sequence sap2010:Annotation.AnnotationText="Create dictionary for hackerrank dynamic values" DisplayName="Invite Dictionary" sap:VirtualizedContainerService.HintSize="1260,112" sap2010:WorkflowViewState.IdRef="Sequence_2">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">False</x:Boolean>
@@ -279,7 +279,7 @@
         <p:AddToDictionary x:TypeArguments="x:String, x:String" Dictionary="[inviteDict]" DisplayName="Add to evaluator_email" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="AddToDictionary`2_7" Key="#evaluator_email#" Value="[in_Config(&quot;EvaluatorEmail4&quot;).ToString]" />
         <p:AddToDictionary x:TypeArguments="x:String, x:String" Dictionary="[inviteDict]" DisplayName="Add to force send email" sap:VirtualizedContainerService.HintSize="200,22" sap2010:WorkflowViewState.IdRef="AddToDictionary`2_8" Key="#force#" Value="[in_Config(&quot;ForceInvite&quot;).ToString]" />
       </Sequence>
-      <ui:ForEach x:TypeArguments="scg:KeyValuePair(x:String, x:String)" CurrentIndex="{x:Null}" sap2010:Annotation.AnnotationText="Modify the dynamic values of the bodyapi" DisplayName="For Each item in Dict" sap:VirtualizedContainerService.HintSize="1260,317" sap2010:WorkflowViewState.IdRef="ForEach`1_1" Values="[inviteDict]">
+      <ui:ForEach x:TypeArguments="scg:KeyValuePair(x:String, x:String)" CurrentIndex="{x:Null}" sap2010:Annotation.AnnotationText="Modify the dynamic values of the bodyapi" DisplayName="For Each item in Dict" sap:VirtualizedContainerService.HintSize="1260,318" sap2010:WorkflowViewState.IdRef="ForEach`1_1" Values="[inviteDict]">
         <ui:ForEach.Body>
           <ActivityAction x:TypeArguments="scg:KeyValuePair(x:String, x:String)">
             <ActivityAction.Argument>
@@ -311,9 +311,9 @@
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </ui:ForEach>
-      <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1260,61" sap2010:WorkflowViewState.IdRef="WriteLine_3" Text="[&quot;Endpoint: &quot; + &quot;https://www.hackerrank.com/x/api/v3/tests/&quot;+testId+&quot;/candidates&quot;]" />
+      <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1260,62" sap2010:WorkflowViewState.IdRef="WriteLine_3" Text="[&quot;Endpoint: &quot; + &quot;https://www.hackerrank.com/x/api/v3/tests/&quot;+testId+&quot;/candidates&quot;]" />
       <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1260,64" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;Body: &quot; + Environment.NewLine  +&#xA;theBody]" />
-      <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1260,61" sap2010:WorkflowViewState.IdRef="WriteLine_5" Text="[&quot;Bio: &quot; + Environment.NewLine + theBody]" />
+      <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1260,62" sap2010:WorkflowViewState.IdRef="WriteLine_5" Text="[&quot;Bio: &quot; + Environment.NewLine + theBody]" />
       <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InviteApiCall RPA DEV" sap:VirtualizedContainerService.HintSize="1260,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Workflows/InviteApiCall.xaml">
         <ui:InvokeWorkflowFile.Arguments>
           <InArgument x:TypeArguments="x:String" x:Key="in_Body">[theBody]</InArgument>
@@ -330,9 +330,9 @@
         </sap:WorkflowViewStateService.ViewState>
       </ui:InvokeWorkflowFile>
       <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1260,64" sap2010:WorkflowViewState.IdRef="WriteLine_4" Text="[&quot;Status: &quot; + outStatus.ToString + Environment.NewLine +&#xA;&quot;TestId: &quot; + candidateId.ToString]" />
-      <If Condition="[outStatus =200]" sap:VirtualizedContainerService.HintSize="1260,1296" sap2010:WorkflowViewState.IdRef="If_1">
+      <If Condition="[outStatus =200]" sap:VirtualizedContainerService.HintSize="1260,1305" sap2010:WorkflowViewState.IdRef="If_1">
         <If.Then>
-          <Sequence DisplayName="Update hackerrank table" sap:VirtualizedContainerService.HintSize="839,1148" sap2010:WorkflowViewState.IdRef="Sequence_9">
+          <Sequence DisplayName="Update hackerrank table" sap:VirtualizedContainerService.HintSize="839,1155" sap2010:WorkflowViewState.IdRef="Sequence_9">
             <Sequence.Variables>
               <Variable x:TypeArguments="sd:DataTable" Name="dt" />
             </Sequence.Variables>
@@ -341,8 +341,8 @@
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="797,91" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;Updating hackerrank...&quot;]" />
-            <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="Check if the hackerrank ID is already in the hackerrank table" CommandType="Text" DataTable="[dt]" DisplayName="Execute SELECT Query" ExistingDbConnection="[in_Connection]" sap:VirtualizedContainerService.HintSize="797,130" sap2010:WorkflowViewState.IdRef="ExecuteQuery_1" Sql="[&quot;select * from dbo.hackerank where hackerrankTestID=&quot;+candidateId]">
+            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="797,93" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="Info" Message="[&quot;Updating hackerrank...&quot;]" />
+            <ui:ExecuteQuery ContinueOnError="{x:Null}" TimeoutMS="{x:Null}" sap2010:Annotation.AnnotationText="Check if the hackerrank ID is already in the hackerrank table" CommandType="Text" DataTable="[dt]" DisplayName="Execute SELECT Query" ExistingDbConnection="[in_Connection]" sap:VirtualizedContainerService.HintSize="797,132" sap2010:WorkflowViewState.IdRef="ExecuteQuery_1" Sql="[&quot;select * from dbo.hackerank where hackerrankTestID=&quot;+candidateId]">
               <ui:ExecuteQuery.Parameters>
                 <scg:Dictionary x:TypeArguments="x:String, Argument" />
               </ui:ExecuteQuery.Parameters>
@@ -352,15 +352,15 @@
                 </scg:Dictionary>
               </sap:WorkflowViewStateService.ViewState>
             </ui:ExecuteQuery>
-            <If Condition="[dt.Rows.Count = 0]" sap:VirtualizedContainerService.HintSize="797,555" sap2010:WorkflowViewState.IdRef="If_2">
+            <If Condition="[dt.Rows.Count = 0]" sap:VirtualizedContainerService.HintSize="797,558" sap2010:WorkflowViewState.IdRef="If_2">
               <If.Then>
-                <Sequence sap:VirtualizedContainerService.HintSize="376,407" sap2010:WorkflowViewState.IdRef="Sequence_13">
+                <Sequence sap:VirtualizedContainerService.HintSize="376,408" sap2010:WorkflowViewState.IdRef="Sequence_13">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="334,61" sap2010:WorkflowViewState.IdRef="WriteLine_6" Text="Hackerrank Id does not exists" />
+                  <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="334,62" sap2010:WorkflowViewState.IdRef="WriteLine_6" Text="Hackerrank Id does not exists" />
                   <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InsertIntoHackerrank workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_2" UnSafe="False" WorkflowFileName="Workflows\InsertIntoHackerrank.xaml">
                     <ui:InvokeWorkflowFile.Arguments>
                       <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[in_Connection]</InArgument>
@@ -380,13 +380,13 @@
                 </Sequence>
               </If.Then>
               <If.Else>
-                <Sequence sap:VirtualizedContainerService.HintSize="376,280" sap2010:WorkflowViewState.IdRef="Sequence_14">
+                <Sequence sap:VirtualizedContainerService.HintSize="376,281" sap2010:WorkflowViewState.IdRef="Sequence_14">
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="334,61" sap2010:WorkflowViewState.IdRef="WriteLine_7" Text="Hackerrank Id exists" />
+                  <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="334,62" sap2010:WorkflowViewState.IdRef="WriteLine_7" Text="Hackerrank Id exists" />
                   <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InsertIntoRobotLogTable workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="Workflows\InsertIntoRobotLogTable.xaml">
                     <ui:InvokeWorkflowFile.Arguments>
                       <InArgument x:TypeArguments="x:String" x:Key="in_ID">
@@ -422,22 +422,30 @@
           </Sequence>
         </If.Then>
         <If.Else>
-          <Sequence sap:VirtualizedContainerService.HintSize="376,637" sap2010:WorkflowViewState.IdRef="Sequence_10">
+          <Sequence sap:VirtualizedContainerService.HintSize="376,639" sap2010:WorkflowViewState.IdRef="Sequence_10">
             <sap:WorkflowViewStateService.ViewState>
               <scg:Dictionary x:TypeArguments="x:String, x:Object">
                 <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,91" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Warn" Message="[&quot;The Candidate was not invited. Email: &quot;+in_Email +&quot; Status code: &quot; +outStatus.ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString]" />
+            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,93" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Warn" Message="[&quot;The Candidate was not invited. Email: &quot;+in_Email +&quot; Status code: &quot; +outStatus.ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString]" />
             <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InsertIntoHackerrank workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_6" UnSafe="False" WorkflowFileName="Workflows\InsertIntoHackerrank.xaml">
               <ui:InvokeWorkflowFile.Arguments>
-                <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[in_Connection]</InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="in_PartnerEmployeeID">[in_EmployeeId]</InArgument>
+                <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+                  <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
+                </InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="in_PartnerEmployeeID">
+                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_EmployeeId" />
+                </InArgument>
                 <InArgument x:TypeArguments="x:String" x:Key="in_hackerrankTestID">
                   <Literal x:TypeArguments="x:String" Value="" />
                 </InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="in_status">not invited</InArgument>
-                <InArgument x:TypeArguments="x:String" x:Key="in_positionID">[in_EmployeePosition.ToString]</InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="in_status">
+                  <Literal x:TypeArguments="x:String">not invited</Literal>
+                </InArgument>
+                <InArgument x:TypeArguments="x:String" x:Key="in_positionID">
+                  <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_EmployeePosition.ToString" />
+                </InArgument>
               </ui:InvokeWorkflowFile.Arguments>
             </ui:InvokeWorkflowFile>
             <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InsertIntoRobotLogTable workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_5" UnSafe="False" WorkflowFileName="Workflows\InsertIntoRobotLogTable.xaml">
