--- a/Workflows/processNewCandidate.xaml
+++ b/Workflows/processNewCandidate.xaml
@@ -5,7 +5,7 @@
     <x:Property Name="in_Connection" Type="InArgument(ui:DatabaseConnection)" />
     <x:Property Name="in_Candidate" Type="InArgument(sd:DataRow)" />
   </x:Members>
-  <sap:VirtualizedContainerService.HintSize>1208,1253</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1208,1441</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>ActivityBuilder_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="18">
@@ -30,7 +30,7 @@
     </scg:List>
   </TextExpression.NamespacesForImplementation>
   <TextExpression.ReferencesForImplementation>
-    <scg:List x:TypeArguments="AssemblyReference" Capacity="40">
+    <scg:List x:TypeArguments="AssemblyReference" Capacity="22">
       <AssemblyReference>System.Activities</AssemblyReference>
       <AssemblyReference>UiPath.Database</AssemblyReference>
       <AssemblyReference>mscorlib</AssemblyReference>
@@ -55,18 +55,36 @@
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="1218,1048" sap2010:WorkflowViewState.IdRef="Sequence_5">
+  <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="1218,1276" sap2010:WorkflowViewState.IdRef="Sequence_5">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="candidateId" />
       <Variable x:TypeArguments="x:Boolean" Name="inserted" />
       <Variable x:TypeArguments="x:String" Name="testId" />
+      <Variable x:TypeArguments="x:Boolean" Name="allowed" />
     </Sequence.Variables>
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <If Condition="[Boolean.Parse(in_Candidate(&quot;validEmail&quot;).ToString )]" sap:VirtualizedContainerService.HintSize="1176,956" sap2010:WorkflowViewState.IdRef="If_2">
+    <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke VerifyEmployeeIsAllowedToCandidate workflow" sap:VirtualizedContainerService.HintSize="1176,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_11" UnSafe="False" WorkflowFileName="Workflows\VerifyEmployeeIsAllowedToCandidate.xaml">
+      <ui:InvokeWorkflowFile.Arguments>
+        <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+          <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
+        </InArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeEmail">
+          <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;Email Address&quot;).ToString" />
+        </InArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_PartnerId">
+          <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;partnerId&quot;).ToString" />
+        </InArgument>
+        <OutArgument x:TypeArguments="x:Boolean" x:Key="out_Status">
+          <mva:VisualBasicReference x:TypeArguments="x:Boolean" ExpressionText="allowed" />
+        </OutArgument>
+      </ui:InvokeWorkflowFile.Arguments>
+    </ui:InvokeWorkflowFile>
+    <WriteLine DisplayName="Write Line" sap:VirtualizedContainerService.HintSize="1176,61" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[&quot;Allowed: &quot; + allowed.ToString + Environment.NewLine + Boolean.Parse(in_Candidate(&quot;validEmail&quot;).ToString ).ToString]" />
+    <If Condition="[Boolean.Parse(in_Candidate(&quot;validEmail&quot;).ToString ) and allowed]" sap:VirtualizedContainerService.HintSize="1176,956" sap2010:WorkflowViewState.IdRef="If_2">
       <If.Then>
         <Sequence sap:VirtualizedContainerService.HintSize="755,808" sap2010:WorkflowViewState.IdRef="Sequence_6">
           <sap:WorkflowViewStateService.ViewState>
@@ -95,66 +113,34 @@
           </ui:InvokeWorkflowFile>
           <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke SendHackerrankTest for RPA Dev" sap:VirtualizedContainerService.HintSize="713,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_4" UnSafe="False" WorkflowFileName="Workflows\SendHackerrankTest.xaml">
             <ui:InvokeWorkflowFile.Arguments>
-              <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">
-                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="candidateId" />
-              </InArgument>
-              <InArgument x:TypeArguments="x:Int32" x:Key="in_EmployeePosition">
-                <mva:VisualBasicValue x:TypeArguments="x:Int32" ExpressionText="in_EmployeePosition" />
-              </InArgument>
-              <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">
-                <mva:VisualBasicValue x:TypeArguments="scg:Dictionary(x:String, x:Object)" ExpressionText="in_Config" />
-              </InArgument>
-              <InArgument x:TypeArguments="x:String" x:Key="in_FullName">
-                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;First Name&quot;).ToString + &quot; &quot; + in_Candidate(&quot;Last Name&quot;).ToString" />
-              </InArgument>
-              <InArgument x:TypeArguments="x:String" x:Key="in_Email">
-                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;Email Address&quot;).ToString" />
-              </InArgument>
-              <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
-                <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
-              </InArgument>
-              <OutArgument x:TypeArguments="x:Boolean" x:Key="out_Inserted">
-                <mva:VisualBasicReference x:TypeArguments="x:Boolean" ExpressionText="inserted" />
-              </OutArgument>
-              <InArgument x:TypeArguments="x:String" x:Key="out_TestId">
-                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="testId" />
-              </InArgument>
-              <InArgument x:TypeArguments="x:String" x:Key="in_PartnerId">
-                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;partnerId&quot;).ToString" />
-              </InArgument>
-              <InArgument x:TypeArguments="sd:DataRow" x:Key="in_Candidate">
-                <mva:VisualBasicValue x:TypeArguments="sd:DataRow" ExpressionText="in_Candidate" />
-              </InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">[candidateId]</InArgument>
+              <InArgument x:TypeArguments="x:Int32" x:Key="in_EmployeePosition">[in_EmployeePosition]</InArgument>
+              <InArgument x:TypeArguments="scg:Dictionary(x:String, x:Object)" x:Key="in_Config">[in_Config]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_FullName">[in_Candidate("First Name").ToString + " " + in_Candidate("Last Name").ToString]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_Email">[in_Candidate("Email Address").ToString]</InArgument>
+              <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[in_Connection]</InArgument>
+              <OutArgument x:TypeArguments="x:Boolean" x:Key="out_Inserted">[inserted]</OutArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="out_TestId">[testId]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_PartnerId">[in_Candidate("partnerId").ToString]</InArgument>
+              <InArgument x:TypeArguments="sd:DataRow" x:Key="in_Candidate">[in_Candidate]</InArgument>
             </ui:InvokeWorkflowFile.Arguments>
           </ui:InvokeWorkflowFile>
           <If Condition="[inserted]" DisplayName="If inserat hackerrank test id modificam status" sap:VirtualizedContainerService.HintSize="713,235" sap2010:WorkflowViewState.IdRef="If_3">
             <If.Then>
               <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke UpdateEmployeeStatus workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_8" UnSafe="False" WorkflowFileName="Workflows\UpdateEmployeeStatus.xaml">
                 <ui:InvokeWorkflowFile.Arguments>
-                  <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
-                    <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
-                  </InArgument>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_Status">
-                    <Literal x:TypeArguments="x:String">3</Literal>
-                  </InArgument>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">
-                    <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="candidateId" />
-                  </InArgument>
+                  <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[in_Connection]</InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_Status">3</InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">[candidateId]</InArgument>
                 </ui:InvokeWorkflowFile.Arguments>
               </ui:InvokeWorkflowFile>
             </If.Then>
             <If.Else>
               <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke UpdateEmployeeStatus workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_9" UnSafe="False" WorkflowFileName="Workflows\UpdateEmployeeStatus.xaml">
                 <ui:InvokeWorkflowFile.Arguments>
-                  <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
-                    <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
-                  </InArgument>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_Status">
-                    <Literal x:TypeArguments="x:String">2</Literal>
-                  </InArgument>
-                  <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">
-                    <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="candidateId" />
-                  </InArgument>
+                  <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[in_Connection]</InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_Status">2</InArgument>
+                  <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">[candidateId]</InArgument>
                 </ui:InvokeWorkflowFile.Arguments>
               </ui:InvokeWorkflowFile>
             </If.Else>
@@ -186,12 +172,18 @@
               <x:Boolean x:Key="IsPinned">False</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,91" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Warn" Message="[&quot;The Candidate email is not valid: &quot;+  in_Candidate(&quot;Email Address&quot;).ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString]" />
+          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,91" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Warn" Message="[&quot;The Candidate email is not valid or Candidate is already assigned to a Certification &quot;+  in_Candidate(&quot;Email Address&quot;).ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString]" />
           <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InsertIntoRobotLogTable workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_7" UnSafe="False" WorkflowFileName="Workflows\InsertIntoRobotLogTable.xaml">
             <ui:InvokeWorkflowFile.Arguments>
-              <InArgument x:TypeArguments="x:String" x:Key="in_ID">[in_Candidate("partnerId").ToString]</InArgument>
-              <InArgument x:TypeArguments="x:String" x:Key="in_RobotLog" xml:space="preserve">["The Candidate email is not valid: "+  in_Candidate("Email Address").ToString  + " Position: " + in_EmployeePosition.ToString]</InArgument>
-              <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[in_Connection]</InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_ID">
+                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_Candidate(&quot;partnerId&quot;).ToString" />
+              </InArgument>
+              <InArgument x:TypeArguments="x:String" x:Key="in_RobotLog">
+                <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="&quot;The Candidate email is not valid or Candidate is already assigned to a Certification &quot;+  in_Candidate(&quot;Email Address&quot;).ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString" />
+              </InArgument>
+              <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+                <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
+              </InArgument>
             </ui:InvokeWorkflowFile.Arguments>
           </ui:InvokeWorkflowFile>
         </Sequence>
