--- a/Workflows/processNewCandidate.xaml
+++ b/Workflows/processNewCandidate.xaml
@@ -158,7 +158,7 @@
                           <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
                         </InArgument>
                         <InArgument x:TypeArguments="x:String" x:Key="in_Status">
-                          <Literal x:TypeArguments="x:String">3</Literal>
+                          <Literal x:TypeArguments="x:String">1</Literal>
                         </InArgument>
                         <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">
                           <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="candidateId" />
@@ -169,9 +169,15 @@
                   <If.Else>
                     <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke UpdateEmployeeStatus workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_9" UnSafe="False" WorkflowFileName="Workflows\UpdateEmployeeStatus.xaml">
                       <ui:InvokeWorkflowFile.Arguments>
-                        <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">[in_Connection]</InArgument>
-                        <InArgument x:TypeArguments="x:String" x:Key="in_Status">2</InArgument>
-                        <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">[candidateId]</InArgument>
+                        <InArgument x:TypeArguments="ui:DatabaseConnection" x:Key="in_Connection">
+                          <mva:VisualBasicValue x:TypeArguments="ui:DatabaseConnection" ExpressionText="in_Connection" />
+                        </InArgument>
+                        <InArgument x:TypeArguments="x:String" x:Key="in_Status">
+                          <Literal x:TypeArguments="x:String">2</Literal>
+                        </InArgument>
+                        <InArgument x:TypeArguments="x:String" x:Key="in_EmployeeId">
+                          <mva:VisualBasicValue x:TypeArguments="x:String" ExpressionText="candidateId" />
+                        </InArgument>
                       </ui:InvokeWorkflowFile.Arguments>
                     </ui:InvokeWorkflowFile>
                   </If.Else>
@@ -233,14 +239,14 @@
         </Sequence>
       </If.Then>
       <If.Else>
-        <Sequence sap:VirtualizedContainerService.HintSize="376,412" sap2010:WorkflowViewState.IdRef="Sequence_7">
+        <Sequence sap:VirtualizedContainerService.HintSize="376,410" sap2010:WorkflowViewState.IdRef="Sequence_7">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
               <x:Boolean x:Key="IsPinned">False</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,93" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Warn" Message="[&quot;The Candidate email is not valid &quot;+  in_Candidate(&quot;Email Address&quot;).ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString]" />
+          <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,91" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Warn" Message="[&quot;The Candidate email is not valid &quot;+  in_Candidate(&quot;Email Address&quot;).ToString  + &quot; Position: &quot; + in_EmployeePosition.ToString]" />
           <ui:InvokeWorkflowFile ContinueOnError="{x:Null}" DisplayName="Invoke InsertIntoRobotLogTable workflow" sap:VirtualizedContainerService.HintSize="334,87" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_7" UnSafe="False" WorkflowFileName="Workflows\InsertIntoRobotLogTable.xaml">
             <ui:InvokeWorkflowFile.Arguments>
               <InArgument x:TypeArguments="x:String" x:Key="in_ID">[in_Candidate("partnerId").ToString]</InArgument>
